# ken

./: .gitmodules  CLAUDE.md  Cargo.toml  IDEA.md  README.md
prompts/: MR_format.md  example_prompts.md  issue_format.md  system_prompt.md
src/: agent.rs  cli.rs  config.rs  context.rs  gitlab_tools.rs  interactive.rs  main.rs  mcp_client.rs
src/tools/: context.rs  gitlab.rs  glab.rs  mod.rs
