[package]
name = "ken"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { version = "0.13", features = ["mcp"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
serde_json = "1"
tracing = "0.1"
mcp-core = { version = "0.1.50", features = ["sse"] }
reqwest = { version = "0.12.20", features = ["json"] }
schemars = "0.8" # rig-core's tool system uses this for schema generation
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
rpassword = "7.3"
urlencoding = "2.1"
rustyline = "14.0"
